--- a/style.css
+++ b/style.css
@@ -1,27 +1,42 @@
+body{
+    background-color: blanchedalmond;
+}
+h1{
+    color:red;
+    text-align: center;
+
+}
+
 .cal{
     margin:auto;
     text-align:center ;
     border: 10px solid black ;
-    height: 320px;
-    width:280px;
+    height: 360px;
+    width:300px;
     background-color:black;
+    border-radius: 9px;
 }
 table{
     margin: auto;
 }
 input{
+    border-radius: 9px;
+    font-size: 30px;
     margin:auto;
-    height: 35px;
-    width:242px;
+    height: 38px;
+    width:285px;
     border:5px solid black;
+    
 }
 button{
+    border-radius: 35px;
     background-color: gray;
     text-align: center;
-    height:50px;
-    width:59px;
+    height:55px;
+    width:65px;
     font-size: 25px;
-    color:white;    
+    color:white;   
+    border: 3px solid white; 
 }
 .ac{
     color:red;
